# Asphalt

./: .gitmodules  Build.bat  Build.sh  CMakeLists.txt  Cargo.toml  LICENSE.md  README.md  SetupBuild.bat  SetupBuild.sh  build.rs
res/icon/: Asphalt.rc
res/shader/: basic_fragment.glsl  basic_vertex.glsl  block_fragment.glsl  block_vertex.glsl  color_fragment.glsl  color_vertex.glsl  invert_fragment.glsl  post_process_vertex.glsl  postprocess_fragment.glsl  postprocess_vertex.glsl  sprite_fragment.glsl  sprite_vertex.glsl  text_fragment.glsl  text_vertex.glsl  water_fragment.glsl
src/: Block.c  Block.h  Chunk.c  Chunk.h  Globals.c  Globals.h  Input.c  Input.h  Mesh.c  Mesh.h  PostProcess.c  PostProcess.h  Render.c  Render.h  Sprite.c  Sprite.h  TextRenderer.c  TextRenderer.h  Texture.c  Texture.h  Util.c  Util.h  camera.rs  chunk.rs  lib.rs  main.c  main.rs  mesh.rs  shader.wgsl  texture.rs
