[package]
name = "asphalt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.3"
bytemuck = { version = "1.13", features = [ "derive" ] }
image = { version = "0.24", default-features = false, features = [ "png", "jpeg" ] }
anyhow = "1.0"
cgmath = "0.18"
instant = "0.1"
noise = "0.8"
rand = "0.8"
wgpu_glyph = { git = "https://github.com/sconybeare/wgpu_glyph", branch="wgpu-0.15" }

[build-dependencies]
embed-resource = "1.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
getrandom = { version = "0.2", features = ["js"] }
